Twitter Bootstrap 3.0 pagination

--- a/app/views/kaminari/twitter-bootstrap/_paginator.html.erb
+++ b/app/views/kaminari/twitter-bootstrap/_paginator.html.erb
@@ -9,8 +9,7 @@
 <% pagination_class ||= "" %>
 
 <%= paginator.render do -%>
-  <div class="pagination <%= pagination_class %>">
-    <ul>
+    <ul class="pagination <%= pagination_class %>">
     <%= first_page_tag unless current_page.first? %>
     <%= prev_page_tag unless current_page.first? %>
     <% each_page do |page| -%>
@@ -23,5 +22,4 @@
     <%= next_page_tag unless current_page.last? %>
     <%= last_page_tag unless current_page.last? %>
     </ul>
-  </div>
 <% end -%>
